blog auto backup script's commit

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -2,7 +2,7 @@
 prefixName: 不安きのこ
 siteName: Site
 # favicon and site master avatar
-favicon: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/favicon/favicon.ico
+favicon: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/favicon/bitbug_favicon.ico
 avatar: https://i.loli.net/2020/02/09/KxCtIyfFesrv4Zw.jpg
 url: https://fuann-kinoko.github.io/
 description: Vtuber废人/游戏废人
