blog auto backup script's commit

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -3,7 +3,7 @@ prefixName: 不安きのこ
 siteName: Site
 # favicon and site master avatar
 favicon: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/favicon/bitbug_favicon.ico
-avatar: https://i.loli.net/2020/02/09/KxCtIyfFesrv4Zw.jpg
+avatar: https://bbs.bemanicn.cc/uc_server/avatar.php?uid=4174&size=big
 url: https://fuann-kinoko.github.io/
 description: Vtuber废人/游戏废人
 #cdn: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6
