--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -11,7 +11,7 @@ pjax: 1
 # 1开启
 mathjax: 0
 
-notice: 博客维修中……
+notice: 2021国庆快乐！
 lazyloadImg: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
