--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -79,18 +79,18 @@ siteBuildingTime: 10/03/2019
 
 #social  url, img PC端配置
 social:
-  github: {url: http://github.com/honjun, img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/social/github.png}
+  github: {url: https://github.com/Fuann-Kinoko, img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/social/github.png}
 #  sina: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/sina.png}
-  wangyiyun: {url: http://weibo.com/mashirozx?is_all=1, img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/social/wangyiyun.png}
+  wangyiyun: {url: https://music.163.com/#/user/home?id=77636128, img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/social/wangyiyun.png}
   bangumi: {url: https://bgm.tv/user/403965, img: https://i.loli.net/2019/11/23/mk41cgeCGZo5hjM.png}
 #  email: {url: http://weibo.com/mashirozx?is_all=1, img: /img/social/email.svg}
  # wechat: {url: /#, qrcode: /img/custom/wechat.jpg, img: /img/social/wechat.png}
 
 #social  url, img 移动端配置
 msocial:
-  github: {url: http://github.com/honjun, fa: fa-github, color: 333}
-  weibo: {url: http://weibo.com/mashirozx?is_all=1, fa: fa-weibo, color: dd4b39}
-  qq: {url: https://wpa.qq.com/msgrd?v=3&uin=954655431&site=qq&menu=yes, fa: fa-qq, color: 25c6fe}
+  github: {url: https://github.com/Fuann-Kinoko, fa: fa-github, color: 333}
+  weibo: {url: https://weibo.com/u/7413104452, fa: fa-weibo, color: dd4b39}
+  qq: {url: https://i.loli.net/2021/10/04/SQuhe9lApTmIyoM.jpg, fa: fa-qq, color: 25c6fe}
 
 donate: false
 #  enable: false
