--- a/_config.yml
+++ b/_config.yml
@@ -125,4 +125,5 @@ gitalk:
     # Ensure uniqueness and length less than 50
     id: location.pathname
     # Facebook-like distraction free mode
+    proxy: https://netnr-proxy.cloudno.de/https://github.com/login/oauth/access_token
     distractionFreeMode: false
