--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.9.0"
   },
   "dependencies": {
+    "gitalk": "^1.7.2",
     "hexo": "^3.9.0",
     "hexo-blog-encrypt": "2.0.*",
     "hexo-deployer-git": "^0.2.0",
